feat: unificação dos reportes e acidentes
